--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <body>
     <p style="color: red">
       I don't know what I'm doing.
+
+      <a href="second.html">Page 2</a>
     </p>
   </body>
 </html>
