--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en" dir="ltr">
   <body>
     <p style="color: red">
-      I don't know what I'm doing.
+      I have no clue what I'm doing.
 
       <a href="second.html">Page 2</a>
     </p>
