--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en" dir="ltr">
   <body>
     <p style="color: red">
-      I have no clue what I'm doing.
-
+      I don't know what I'm doing.
+  <br>
       <a href="second.html">Page 2</a>
     </p>
   </body>
