--- a/second.html
+++ b/second.html
@@ -1,7 +1,18 @@
 <html lang="en" dir="ltr">
   <body>
-    <p style="color: blue">
+    <p id="text">
       I still don't know what I'm doing.
     </p>
+    
+    <script>
+      let colors = ["red", "orange", "yellow", "green", "blue", "indigo", "violet"];
+      let index = 0;
+      let text = document.getElementById("text");
+
+      setInterval(function() {
+      text.style.color = colors[index];
+      index = (index + 1) % colors.length;
+      }, 1000);
+    </script>
   </body>
 </html>
