--- a/second.html
+++ b/second.html
@@ -1,6 +1,6 @@
 <html lang="en" dir="ltr">
   <body>
-    <p id="text">
+    <p id="text" style="font-size:10vw">
       I still don't know what I'm doing.
     </p>
     
