--- a/second.html
+++ b/second.html
@@ -3,10 +3,10 @@
     <p id="one" style="font-size:6vw">
       I still 
     </p>
-    <p id="one" style="font-size:6vw">
+    <p id="two" style="font-size:6vw">
       don't know what 
     </p>
-    <p id="one" style="font-size:6vw">
+    <p id="three" style="font-size:6vw">
       I'm doing.
     </p>
     
