--- a/second.html
+++ b/second.html
@@ -13,9 +13,9 @@
     <script>
       let colors = ["red", "orange", "yellow", "green", "blue", "indigo", "violet"];
       let index = 0;
-      let text = document.getElementById("one");
-      let text = document.getElementById("two");
-      let text = document.getElementById("three");
+      let one = document.getElementById("one");
+      let two = document.getElementById("two");
+      let three = document.getElementById("three");
       setInterval(function() {
       one.style.color = colors[index];
       two.style.color = colors[index + 1]%colors.length;
