--- a/second.html
+++ b/second.html
@@ -17,9 +17,9 @@
       let two = document.getElementById("two");
       let three = document.getElementById("three");
       setInterval(function() {
-      one.style.color = colors[index];
+      three.style.color = colors[index];
       two.style.color = colors[(index + 1)%colors.length];
-      three.style.color = colors[(index+2)%colors.length];
+      one.style.color = colors[(index+2)%colors.length];
       index = (index + 1) % colors.length;
       }, 1000);
     </script>
