--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
       I don't know what I'm doing.
   <br>
       <a href="second.html">Page 2</a>
+  <br>
+      <a href="third.html">Page 3</a>
     </p>
   </body>
 </html>
