--- a/third.html
+++ b/third.html
@@ -10,7 +10,8 @@
         {
           for(var j=0; j<d; j++)
           {
-            c.fillStyle="rgb(j*255/d,0,i*255/d)";
+            //c.fillStyle="rgb(j*255/d,0,i*255/d)";
+            c.fillStyle="rgb(255,0,128)";
             c.fillRect(s*i,s*j,s,s);
           }
         }
