--- a/third.html
+++ b/third.html
@@ -10,7 +10,7 @@
         {
           for(var j=0; j<d; j++)
           {
-            c.fillStyle='rgb(${j*10},0,${i*10})';
+            c.fillStyle=`rgb(${j*10},0,${i*10})`;
             //c.fillStyle="rgb(255,0,128)";
             c.fillRect(s*i,s*j,s,s);
           }
