--- a/fourth.html
+++ b/fourth.html
@@ -5,17 +5,21 @@
         var can=document.getElementById("theCanvas");
         can.width=750;
         can.height=750;
-        var c=can.getContext("2d");
-        var d=50;
-        var s=15;
-        for(var i=0; i<d; i++)
+        function myTick()
         {
-          for(var j=0; j<d; j++)
+          var c=can.getContext("2d");
+          var d=50;
+          var s=15;
+          for(var i=0; i<d; i++)
           {
-            c.fillStyle=`rgb(${j*5},0,${i*5})`;
-            c.fillRect(s*i,s*j,s,s);
+            for(var j=0; j<d; j++)
+            {
+              c.fillStyle=`rgb(${j*5},0,${i*5})`;
+              c.fillRect(s*i,s*j,s,s);
+            }
           }
         }
+        
       </script>
   </body>     
 </html>
