--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       <a href="second.html">Page 2</a>
   <br>
       <a href="third.html">Page 3</a>
+  <br>
+      <a href="third.html">Page 3</a>
     </p>
   </body>
 </html>
