--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <br>
       <a href="third.html">Page 3</a>
   <br>
-      <a href="third.html">Page 3</a>
+      <a href="fourth.html">Page 4</a>
     </p>
   </body>
 </html>
