--- a/fourth.html
+++ b/fourth.html
@@ -25,7 +25,7 @@
           {
             for(var j=0; j<d; j++)
             {
-              c.fillStyle=`rgb(${gb(j*5,tick,25},0,${gb(i*5,tick,10)})`;
+              c.fillStyle=`rgb(${gb(j*5,tick,25)},0,${gb(i*5,tick,10)})`;
               c.fillRect(s*i,s*j,s,s);
             }
           }
