--- a/fourth.html
+++ b/fourth.html
@@ -1,5 +1,5 @@
 <html>
-  <body>
+  <body style="background-color: #000000;">
     <canvas id="theCanvas"></canvas>
       <script>
         var can=document.getElementById("theCanvas");
