--- a/fifth.html
+++ b/fifth.html
@@ -47,5 +47,8 @@
         setInterval(myTick,200);
         
       </script>
+      
+      <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+<label for="vehicle1"> I have a bike</label><br>
   </body>     
 </html>
