--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       <a href="third.html">Page 3</a>
   <br>
       <a href="fourth.html">Page 4</a>
+  <br>
+      <a href="fifth.html">Page 5</a>
     </p>
   </body>
 </html>
