--- a/fifth.html
+++ b/fifth.html
@@ -1,5 +1,5 @@
 <html>
-  <body style="background-color: #000000;">
+  <body style="background-color: #ffffff;">
     <canvas id="theCanvas"></canvas>
       <script>
         var can=document.getElementById("theCanvas");
@@ -47,7 +47,7 @@
         setInterval(myTick,200);
         
       </script>
-      
+      <br>
       <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
 <label for="vehicle1"> I have a bike</label><br>
   </body>     
