--- a/fifth.html
+++ b/fifth.html
@@ -48,7 +48,7 @@
         
       </script>
       <br>
-      <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-<label for="vehicle1"> I have a bike</label><br>
+      <input type="checkbox" id="rc1" name="rc1" value="RedOn" checked=true>
+      <label for="rc1">Red</label><br>
   </body>     
 </html>
