--- a/fifth.html
+++ b/fifth.html
@@ -48,13 +48,13 @@
         
       </script>
       <br>
-      <input type="checkbox" id="rc" name="rc" value="RedOn" checked=true>
+      <input type="checkbox" id="rc" name="rc" value="RedOn" checked>
       <label for="rc">Red</label><br>
-      <input type="checkbox" id="gc" name="gc" value="GreenOn" checked=true>
+      <input type="checkbox" id="gc" name="gc" value="GreenOn" checked>
       <label for="gc">Green</label><br>
-      <input type="checkbox" id="bc" name="bc" value="BlueOn" checked=true>
+      <input type="checkbox" id="bc" name="bc" value="BlueOn" checked>
       <label for="bc">Blue</label><br>
-      <input type="checkbox" id="revc" name="revc" value="ReverseOn" checked=false>
+      <input type="checkbox" id="revc" name="revc" value="ReverseOn">
       <label for="revc">Reverse</label><br>
   </body>     
 </html>
