--- a/fifth.html
+++ b/fifth.html
@@ -49,12 +49,12 @@
       </script>
       <br>
       <input type="checkbox" id="rc" name="rc" value="RedOn" checked>
-      <label for="rc">Red</label><br>
+      <label for="rc" style="color: red;">Red</label><br>
       <input type="checkbox" id="gc" name="gc" value="GreenOn" checked>
-      <label for="gc">Green</label><br>
+      <label for="gc" style="color: green;">Green</label><br>
       <input type="checkbox" id="bc" name="bc" value="BlueOn" checked>
-      <label for="bc">Blue</label><br>
+      <label for="bc" style="color: blue;">Blue</label><br>
       <input type="checkbox" id="revc" name="revc" value="ReverseOn">
-      <label for="revc">Reverse</label><br>
+      <label for="revc" style="color: yellow;">Reverse</label><br>
   </body>     
 </html>
