--- a/fifth.html
+++ b/fifth.html
@@ -8,6 +8,17 @@
         var tick=0;
         function gb(o,t,v)
         {
+          if(document.getElementById('bc').checked)
+          {
+            return gs(o,t,v);
+          }
+          else
+          {
+            return 0;
+          }
+        }
+        function gs(o,t,v)
+        {
           var x=(o+t*v)%512;
           if(x>=256)
           {
@@ -25,7 +36,7 @@
           {
             c=50-c;
           }
-          x=gb((r+c)*15,tick,5);
+          x=gs((r+c)*15,tick,5);
           return x;
         }
         function myTick()
@@ -39,7 +50,7 @@
           {
             for(var j=0; j<d; j++)
             {
-              c.fillStyle=`rgb(${gb(j*5,tick,25)},${gg(i,j,tick,20)},${gb(i*5,tick,10)})`;
+              c.fillStyle=`rgb(${gs(j*5,tick,25)},${gg(i,j,tick,20)},${gb(i*5,tick,10)})`;
               c.fillRect(s*i,s*j,s,s);
             }
           }
