--- a/fifth.html
+++ b/fifth.html
@@ -39,7 +39,7 @@
         }
         function gg(r,c,t,v)
         {
-          if(document.getElementById('rc').checked)
+          if(document.getElementById('gc').checked)
           {
             if(r>25)
             {
