--- a/fifth.html
+++ b/fifth.html
@@ -86,11 +86,11 @@
       <br>
       <input type="checkbox" id="rc" name="rc" value="RedOn" style="height: 40px; width: 40px;" checked>
       <label for="rc" style="color: red; font-size: 40px">Red</label><br>
-      <input type="checkbox" id="gc" name="gc" value="GreenOn" checked>
-      <label for="gc" style="color: green;">Green</label><br>
-      <input type="checkbox" id="bc" name="bc" value="BlueOn" checked>
-      <label for="bc" style="color: blue;">Blue</label><br>
-      <input type="checkbox" id="revc" name="revc" value="ReverseOn">
-      <label for="revc" style="color: yellow;">Reverse</label><br>
+      <input type="checkbox" id="gc" name="gc" value="GreenOn" style="height: 40px; width: 40px;" checked>
+      <label for="gc" style="color: green; font-size: 40px">Green</label><br>
+      <input type="checkbox" id="bc" name="bc" value="BlueOn" style="height: 40px; width: 40px;" checked>
+      <label for="bc" style="color: blue; font-size: 40px">Blue</label><br>
+      <input type="checkbox" id="revc" name="revc" value="ReverseOn" style="height: 40px; width: 40px;">
+      <label for="revc" style="color: yellow; font-size: 40px">Reverse</label><br>
   </body>     
 </html>
