--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
     <p style="color: red">
       I don't know what I'm doing.
   <br>
-      <a href="second.html">Page 2</a>
+    <a href="second.html">Page 2</a>
   <br>
-      <a href="third.html">Page 3</a>
+    <a href="fifth.html">Page 3</a>
   <br>
-      <a href="fourth.html">Page 4</a>
-  <br>
-      <a href="fifth.html">Page 5</a>
+    <a href="sixth.html">Page 4</a>
     </p>
   </body>
 </html>
