--- a/sixth.html
+++ b/sixth.html
@@ -9,6 +9,8 @@
         
       </script>
       <br>
+      <label for="favcolor">Select your favorite color:</label>
+      <input type="color" id="favcolor" name="favcolor">
       <input type="checkbox" id="rc" name="rc" value="RedOn" style="height: 40px; width: 40px;" checked>
       <label for="rc" style="color: red; font-size: 40px">Red</label><br>
       <input type="checkbox" id="gc" name="gc" value="GreenOn" style="height: 40px; width: 40px;" checked>
