--- a/sixth.html
+++ b/sixth.html
@@ -9,15 +9,9 @@
         
       </script>
       <br>
-      <label for="favcolor">Select your favorite color:</label>
-      <input type="color" id="favcolor" name="favcolor">
-      <input type="checkbox" id="rc" name="rc" value="RedOn" style="height: 40px; width: 40px;" checked>
-      <label for="rc" style="color: red; font-size: 40px">Red</label><br>
-      <input type="checkbox" id="gc" name="gc" value="GreenOn" style="height: 40px; width: 40px;" checked>
-      <label for="gc" style="color: green; font-size: 40px">Green</label><br>
-      <input type="checkbox" id="bc" name="bc" value="BlueOn" style="height: 40px; width: 40px;" checked>
-      <label for="bc" style="color: blue; font-size: 40px">Blue</label><br>
-      <input type="checkbox" id="revc" name="revc" value="ReverseOn" style="height: 40px; width: 40px;">
-      <label for="revc" style="color: yellow; font-size: 40px">Reverse</label><br>
+      <input type="color" id="c1" name="c2">
+      <label for="favcolor">Color 1</label>
+      <input type="color" id="c2" name="c2">
+      <label for="favcolor">Color 2</label>
   </body>     
 </html>
