--- a/sixth.html
+++ b/sixth.html
@@ -6,6 +6,7 @@
         can.width=256;
         can.height=256;
         
+      var ctx=can.getContext("2d");
       const gradient = ctx.createLinearGradient(20, 0, 220, 0);
 
 // Add three color stops
