--- a/sixth.html
+++ b/sixth.html
@@ -22,5 +22,7 @@
       <br>
       <input type="color" id="c2" name="c2">
       <label for="favcolor">Color 2</label>
+      
+      <input type="button" onclick="alert('Hello World!')" value="Go">
   </body>     
 </html>
