--- a/sixth.html
+++ b/sixth.html
@@ -34,10 +34,10 @@
       
       </script>
       <br>
-      <input type="color" id="c1" name="c2">
+      <input type="color" id="c1" name="c2" value="red">
       <label for="favcolor">Color 1</label>
       <br>
-      <input type="color" id="c2" name="c2">
+      <input type="color" id="c2" name="c2" value="green">
       <label for="favcolor">Color 2</label>
       <br>
       <input type="button" onclick="myButtonFunction()" value="Go">
