--- a/sixth.html
+++ b/sixth.html
@@ -14,6 +14,7 @@
 
       ctx.fillStyle = gradient;
       ctx.fillRect(0,0,256,256);
+      alert('Here1');
       
       function myButtonFunction()
       {
@@ -30,6 +31,7 @@
 
         ctx.fillStyle = gradient;
         ctx.fillRect(0,0,256,256);
+        alert('Here2');
       }
       
       </script>
