--- a/sixth.html
+++ b/sixth.html
@@ -26,8 +26,8 @@
         var cs2 = document.getElementById('c2');
         var color2 = cs2.value;
 
-        gradient.addColorStop(0, cs1);
-        gradient.addColorStop(1, cs2);
+        gradient.addColorStop(0, color1);
+        gradient.addColorStop(1, color2);
 
         ctx.fillStyle = gradient;
         ctx.fillRect(0,0,256,256);
