--- a/sixth.html
+++ b/sixth.html
@@ -2,7 +2,7 @@
   <body style="background-color: #808080;">
     <canvas id="theCanvas"></canvas>
       <br>
-      <input type="color" id="c1" name="c1" value="#ffff00">
+      <input type="color" id="c1" name="c1" value="#00ffff">
       <label for="favcolor">Color 1</label>
       <br>
       <input type="color" id="c2" name="c2" value="#00ff00">
