--- a/seventh.html
+++ b/seventh.html
@@ -1,9 +1,11 @@
 <html>
   <body style="background-color: #000000;">
     <canvas id="theCanvas"></canvas>
+    <canvas id="theCanvas2></canvas>
       <script>
         // Create a canvas element
-        var canvas2 = document.createElement('canvas');
+        var canvas2 = document.getElementById("theCanvas2");
+        //var canvas2 = document.createElement('canvas');
         canvas2.width = 50;
         canvas2.height = 50;
 
@@ -14,7 +16,7 @@
         ctx2.fillStyle = '#000000';
         ctx2.fillRect(0,0,50,50);
         
-        ctx2.fillStyle = '#000000';
+        ctx2.fillStyle = '#ffffff';
         ctx2.fillRect(10,20,10,10);
         
         var can=document.getElementById("theCanvas");
