--- a/seventh.html
+++ b/seventh.html
@@ -1,8 +1,8 @@
 <html>
   <body style="background-color: #000000;">
     <canvas id="theCanvas"></canvas>
-    <br>
-    <canvas id="theCanvas2></canvas>
+    //<br>
+    //<canvas id="theCanvas2></canvas>
       <script>
         // Create a canvas element
         //var canvas2 = document.getElementById("theCanvas2");
