--- a/seventh.html
+++ b/seventh.html
@@ -14,11 +14,11 @@
         var ctx2 = canvas2.getContext('2d');
 
         // Then you can do stuff, e.g.:
-        ctx2.fillStyle = '#000000';
-        ctx2.fillRect(0,0,50,50);
+        //ctx2.fillStyle = '#000000';
+        //ctx2.fillRect(0,0,50,50);
         
-        ctx2.fillStyle = '#ffffff';
-        ctx2.fillRect(10,20,10,10);
+        //ctx2.fillStyle = '#ffffff';
+        //ctx2.fillRect(10,20,10,10);
         
         var can=document.getElementById("theCanvas");
         can.width=750;
