--- a/seventh.html
+++ b/seventh.html
@@ -11,7 +11,7 @@
         canvas2.height = 50;
 
         // Get the drawing context
-        var ctx2 = canvas2.getContext('2d');
+        //var ctx2 = canvas2.getContext('2d');
 
         // Then you can do stuff, e.g.:
         //ctx2.fillStyle = '#000000';
