--- a/seventh.html
+++ b/seventh.html
@@ -6,9 +6,9 @@
       <script>
         // Create a canvas element
         //var canvas2 = document.getElementById("theCanvas2");
-        var canvas2 = document.createElement('canvas');
-        canvas2.width = 50;
-        canvas2.height = 50;
+        //var canvas2 = document.createElement('canvas');
+        //canvas2.width = 50;
+        //canvas2.height = 50;
 
         // Get the drawing context
         //var ctx2 = canvas2.getContext('2d');
