--- a/seventh.html
+++ b/seventh.html
@@ -3,20 +3,20 @@
     <canvas id="theCanvas"></canvas>
       <script>
         // Create a canvas element
-        //var canvas2 = document.getElementById("theCanvas2");
-        //var canvas2 = document.createElement('canvas');
-        //canvas2.width = 50;
-        //canvas2.height = 50;
+        var canvas2 = document.getElementById("theCanvas2");
+        var canvas2 = document.createElement('canvas');
+        canvas2.width = 50;
+        canvas2.height = 50;
 
         // Get the drawing context
-        //var ctx2 = canvas2.getContext('2d');
+        var ctx2 = canvas2.getContext('2d');
 
         // Then you can do stuff, e.g.:
-        //ctx2.fillStyle = '#000000';
-        //ctx2.fillRect(0,0,50,50);
+        ctx2.fillStyle = '#000000';
+        ctx2.fillRect(0,0,50,50);
         
-        //ctx2.fillStyle = '#ffffff';
-        //ctx2.fillRect(10,20,10,10);
+        ctx2.fillStyle = '#ffffff';
+        ctx2.fillRect(10,20,10,10);
         
         var can=document.getElementById("theCanvas");
         can.width=750;
