--- a/seventh.html
+++ b/seventh.html
@@ -3,7 +3,7 @@
     <canvas id="theCanvas"></canvas>
       <script>
         // Create a canvas element
-        var canvas2 = document.getElementById("theCanvas2");
+        //var canvas2 = document.getElementById("theCanvas2");
         var canvas2 = document.createElement('canvas');
         canvas2.width = 50;
         canvas2.height = 50;
