--- a/seventh.html
+++ b/seventh.html
@@ -1,10 +1,10 @@
 <html>
   <body style="background-color: #000000;">
-    <canvas id="theCanvas2"></canvas>
+    <canvas id="theCanvas"></canvas>
       <script>
         // Create a canvas element
-        var canvas2 = document.getElementById("theCanvas2");
-        //var canvas2 = document.createElement('canvas');
+        //var canvas2 = document.getElementById("theCanvas2");
+        var canvas2 = document.createElement('canvas');
         canvas2.width = 50;
         canvas2.height = 50;
 
