--- a/seventh.html
+++ b/seventh.html
@@ -16,7 +16,9 @@
         ctx2.fillRect(0,0,50,50);
         
         ctx2.fillStyle = '#ffffff';
-        ctx2.fillRect(10,20,10,10);
+        //ctx2.fillRect(10,20,10,10);
+        ctx2.font = "5px serif";
+        ctx2.fillText("MAYRA", 0, 20);
         
         // Function to get the color of a pixel at (x, y)
         function getPixelFlip(x, y)
