--- a/seventh.html
+++ b/seventh.html
@@ -17,7 +17,7 @@
         
         ctx2.fillStyle = '#ffffff';
         //ctx2.fillRect(10,20,10,10);
-        ctx2.font = "14px serif";
+        ctx2.font = "14px helvetica";
         ctx2.fillText("MAYRA", 0, 31);
         
         // Function to get the color of a pixel at (x, y)
