--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <a href="fifth.html">Page 3</a>
   <br>
     <a href="sixth.html">Page 4</a>
+  <br>
+    <a href="seventh.html">Page 5</a>
     </p>
   </body>
 </html>
