--- a/seventh.html
+++ b/seventh.html
@@ -94,7 +94,7 @@
               c=50-c;
             }
             x=gs((r+c)*15,tick,5);
-            if(getPixelFlip(r,c))
+            if(false)//getPixelFlip(r,c))
             {
               return 255-x;
             }
