--- a/seventh.html
+++ b/seventh.html
@@ -26,9 +26,7 @@
         {
           // Get the pixel data from the canvas
           const pixelData = ctx2.getImageData(x, y, 1, 1).data;
-
-          // Return the color of the pixel as a string in the format '#rrggbb'
-          return (pixelData[0]!=0 || pixelData[1]!=0 || pixelData[2]!=0);
+          return (pixelData[0]>100 || pixelData[1]>100 || pixelData[2]>100);
         }
         
         var can=document.getElementById("theCanvas");
