--- a/seventh.html
+++ b/seventh.html
@@ -26,21 +26,21 @@
         {
           if(c==1)
           {
-            if(document.getElementById('rtc').checked)
+            if(!document.getElementById('rtc').checked)
            {
               return;
             }
           }
           if(c==2)
           {
-            if(document.getElementById('gtc').checked)
+            if(!document.getElementById('gtc').checked)
            {
               return;
             }
           }
           if(c==3)
           {
-            if(document.getElementById('btc').checked)
+            if(!document.getElementById('btc').checked)
            {
               return;
             }
