--- a/ninth.html
+++ b/ninth.html
@@ -1,3 +1,7 @@
+<html>
+  <body style="background-color: #000000;">
+    <canvas id="canvas"></canvas>
+      <script>
 // Get the canvas element
 const canvas = document.getElementById('canvas');
 const gl = canvas.getContext('webgl');
